# NewsSonar

./: .gitignore  README.md  pyproject.toml
annotations/: project-2-at-2023-04-06-16-59-565329e3.json
app/: service.py
docker/tesseract/: Dockerfile
docker/ui_app/: Dockerfile
notebooks/: data_collection.ipynb  model_training.ipynb
scripts/: apply_tesseract.py  build_dataset.py  build_dataset_coco.py  data_images_collection.py  label_text_extraction.py
utils/: __init__.py  inference.py  postprocessing.py  preprocessing.py
