[tool.poetry]
name = "newssonar"
version = "0.1.0"
description = ""
authors = ["jfecunha <joao.o.cunha92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"

pandas = "^1.3.3"
ipykernel = "^6.8.0"
jupyterlab = "^3.2.4"
label-studio = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
