[tool.poetry]
name = "newssonar"
version = "0.1.0"
description = ""
authors = ["jfecunha <joao.o.cunha92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"

pandas = "^1.3.3"
numpy = "1.21.6"
ipykernel = "^6.8.0"
jupyterlab = "^3.2.4"
label-studio = "^1.7.2"
tqdm = "^4.65.0"
joblib = "^1.2.0"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
pytesseract = "^0.3.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.902"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
