[tool.poetry]
name = "newssonar"
version = "0.2.0"
description = ""
authors = ["jfecunha <joao.o.cunha92@gmail.com>"]
readme = "README.md"

packages = [
    { include = "scripts"},
    { include = "utils"}
]

[tool.poetry.dependencies]
python = "3.9.*"

pandas = "^1.3.3"
numpy = "1.21.6"
ipykernel = "^6.8.0"
jupyterlab = "^3.2.4"
label-studio = "^1.7.2"
tqdm = "^4.65.0"
joblib = "^1.2.0"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
pytesseract = "^0.3.10"
scikit-learn = "^1.2.2"
huggingface-hub = "^0.13.4"
datasets = "^2.11.0"
transformers = "^4.28.1"
pyarrow = "^11.0.0"
seqeval = "^1.2.2"
sentencepiece = "^0.1.98"
playwright = "^1.32.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.902"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
